changed www location to var fs

--- a/default.conf
+++ b/default.conf
@@ -4,7 +4,7 @@ http {
         server_name brew.nekohouse.ca;
         listen [::]:80;
         location / {
-            root /media/sdb1/nginx/brew/www/
+            root /var/nginx/brew/www/
         }
     }
 }
