removing http tag because already nested nginx.conf

--- a/default.conf
+++ b/default.conf
@@ -1,10 +1,7 @@
-http {
-
-    server {
-        server_name brew.nekohouse.ca;
-        listen [::]:80;
-        location / {
-            root /var/nginx/brew/www/
-        }
+server {
+    server_name brew.nekohouse.ca;
+    listen [::]:80;
+    location / {
+        root /var/www/brew/;
     }
 }
