updated site to show changes

--- a/default.conf
+++ b/default.conf
@@ -1,7 +1,9 @@
 server {
     server_name brew.nekohouse.ca;
-    listen [::]:80;
+    root /var/www/brew;
+    listen 80;
     location / {
-        root /var/www/brew/;
+        try_files $uri $uri/ /index.html =404;
     }
 }
+
